Fix scroll jump
When the 'pause' button was clicked, the text could jump and become
realigned according to the space taken by the now visible scrollbar.

This change fixes that issue by leaving a gap for the scrollbar whether
it is visible or hidden.

--- a/src/css/pages/surah/stream.scss
+++ b/src/css/pages/surah/stream.scss
@@ -31,8 +31,8 @@
   }
 }
 
-.content ul.body.stream.scroll-y {
-  li.ayah p { width: 98%; }
+.content ul.body.stream {
+  li.ayah p { width: 99%; }
 }
 
 .content .timer {
